# Persian-audio-transcriber

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  config.yaml  coverage.xml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
Test files/: Voice3.txt
business_plan/: financial_model.csv
config/: config.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: basic_transcription.py  batch_processing.py  example_config.yaml  example_results.csv
logs/: logger.py
models/: .dvcignore  .gitignore  README.md
src/persian_transcriber/: __init__.py  __main__.py  cli.py  config.py  transcriber.py
src/persian_transcriber/engines/: __init__.py  base.py  faster_whisper_engine.py  google_engine.py  openai_api_engine.py  whisper_engine.py
src/persian_transcriber/normalizers/: __init__.py  base.py  basic.py  persian.py
src/persian_transcriber/output/: __init__.py  base.py  json_formatter.py  srt_formatter.py  txt_formatter.py
src/persian_transcriber/utils/: __init__.py  audio.py  cuda_setup.py  exceptions.py  logging.py
tests/: conftest.py  test_batch_processing.py  test_engines.py  test_normalizer.py
